--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 *{
-    margin:0;
-    padding:0;
-    border:0;
-  }
+  margin:0;
+  padding:0;
+  border:0;
+}
   
-  body {
-    font-family: Lato;
-  }
+body {
+   font-family: Lato;
+}
   
-  header a {
-    text-decoration: none;
+header a {
+   text-decoration: none;
     
-  }
+}
   
-  h1 {
+h1 {
     font-family: Oswald;
     text-transform: uppercase;
     letter-spacing: 4px;
     color:teal;
     text-align: center;
-  }
+}
   
-  #logo {
+#logo {
     float: left;
     font-size: 1.6em;
     margin-left: 30px;
     margin-top: 25px;
-  }
+}
   
-  nav ul {
+nav ul {
     list-style: none;
     background-color: #4a4a4f;
     text-align: center;
     padding: 0;
     margin: 0;
-  }
+}
   
-  nav li {
+nav li {
     font-size: 1.2em;
     letter-spacing: 4px;
     list-style: none;
     height: 60px;
     display: inline-block;
     margin-top: 30px;
-  }
+}
   
-  nav a {
+nav a {
     color:teal;
     font-size: 1.2em; 
-  }
+}
   
-  nav a:hover {
+nav a:hover {
     color:turquoise;
     font-size: 1.3em;
-  }
-  #about-backgound-image {
+}
+
+#about-backgound-image {
     background-image: url("../img/gym_about.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -64,9 +65,9 @@
     height: 1000px;
     width: 100%;
     overflow: hidden;
-  }
+}
   
-  #about-cover-text {
+#about-cover-text {
       font-size: 130%;
       font-family: Oswald;
       text-transform: uppercase;
@@ -84,9 +85,9 @@
       left: 150px;
   
       position: absolute;
-  }
+}
   
-  #offer-cover-text {
+#offer-cover-text {
       font-size: 130%;
       font-family: Oswald;
       text-transform: uppercase;
@@ -104,4 +105,66 @@
       right: 150px;
   
       position: absolute;
-  }
+}
+
+  /*--classes section--*/
+
+#classes-header {
+  font-size: 1.2em;
+  letter-spacing: 4px;
+  display: inline;
+  position: relative;
+  
+}
+#classes-heading {
+  padding: 30px;
+  background-color: #4a4a4f;
+}
+
+#classes-schedule {
+    background-image:url("../img/classes-background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    padding-left: 20px;
+    overflow: hidden;
+}
+
+#classes-schedule div {
+    color: #fafafa;
+    background-color: rgba(0,0,0, .6);
+    width: 13%;
+    height: 300px;
+    float: left;
+    padding: 60px 0 0 10px;
+    text-align: center;
+    margin: 4px;
+}
+
+#contact-details {
+    background-image: url("../img/suffron_walden.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+    padding-left: 10px;
+}
+
+#contact-details div {
+    color: black;
+    background-color: rgba(0,128,128, .6);
+    width: 24%;
+    height: 300px;
+    float: left;
+    padding: 10px 0 0 10px;
+    text-align: center;
+    margin: 2px 2px 10px 2px;
+    font-size: 130%;
+    font-family: Oswald;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
